18 système de login (#36)
* login fonction ajout de case

* working on it

* client side good

* client handler loggin

* minor clean-up

* testing login

* debugging

* debugging and merge with main

* history start

* history client side

* login server side

* loggin works

* get 15 last messages works theo

* one liner del

* Revert "one liner del"

This reverts commit 760121d978b43a0f8a71a19dc9d5eba834c9488f.

* Revert "get 15 last messages works theo"

This reverts commit 721e2512f236031ad5a5b9241e25099f481a71af.

* clean-up login

* salvaged branch

* fix de login et enregistrement de messages

* save accouts almost done

* retry

* fix pour enregistrer accounts

* correcting errors

* filter caracters on login and wrong password restart

* message spécifiant la manière de sortir ajouté

* fixed stuff

* added logger to server login

* misplaced line moved

* fixed deco issue

* fixed stuff

* corrected cases

* forgot to switch is running to false in default

* removed a logger that was out of place

* changed cicd

* changed to eclipse temurin

---------

Co-authored-by: Kujaku223 <Daniuriza@outlook.com>
Co-authored-by: Mehdi Benouhoud <mehdi.benouhoud@polymtl.ca>